# win-partitions

./: Cargo.toml  README.md
examples/: get_all.rs
src/: lib.rs  win_api.rs  windows_partition.rs  windows_partitions.rs
