[package]
name = "win_partitions"
version = "0.1.0"
authors = ["AliAkbar Shahi", "Hamed J.I"]
edition = "2018"
license = "MIT"
description = "Provides list of system partitions in Windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.18.0"

[build-dependencies]
windows = "0.18.0"