[package]
name = "win_partitions"
version = "0.1.0"
authors = ["AliAkbar Shahi", "Hamed J.I"]
edition = "2018"
license = "MIT"
description = "Provides list of system partitions and their information for Windows"
keywords = ["partition", "drive", "windows"]
categories = ["hardware-support"]
readme = "README.md"

[dependencies]
windows = "0.18.0"

[build-dependencies]
windows = "0.18.0"